deployments/pgsql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30000  # Specify the desired node port (optional)
  selector:
    app: postgres
  type: NodePort  # Change the service type to NodePort
