deployments/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # Use appropriate annotations for your ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: myapp.192.168.49.2.nip.io
    http:
      paths:
      - path: /notifications(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: notifications-microservice
            port:
              number: 3001
      - path: /inventory(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inventory-microservice
            port:
              number: 3000
      - path: /rabbitmq(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672 # Management UI port
      - path: /postgres(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: postgres-service
            port:
              number: 5432
